# api-portal

./: .env.example  .gitignore  AMBIENTES.md  API_GUIA_RAPIDO.md  AUMENTAR_TIMEOUT_APACHE.txt  CONTEXTO_COMPLETO_FC_DATA_API.md  CONTEXTO_FC_DATA_API.json  CONTEXTO_PARA_IA.md  CORRECAO_DATETIME_SQL_SERVER.md  CORRECAO_PREVENTIVA_RAPIDA.rs  Cargo.toml  DEPLOYMENT_WINDOWS.md  DIAGNOSTICO_502_ERROR.bat  DOCUMENTACAO_API_2.0.md  DOCUMENTACAO_API_2.1.md  DOCUMENTACAO_API_PRODUCAO.md  DOCUMENTOS_DE_CONTEXTO.md  DYNAMIC_QUERY_GUIDE.md  ENDPOINTS_CARDS_IMPLEMENTADOS.md  ENDPOINTS_CARDS_TRELLO.md  FC_Data_API.postman_collection.json  FC_Data_API_2.0.postman_collection.json  FC_Data_API_2.1_DYNAMIC.postman_collection.json  FC_Data_API_2.1_Dev_DYNAMIC.postman_environment.json  FC_Data_API_2.1_Prod_DYNAMIC.postman_environment.json  FC_Data_API_CARDS_ANALYTICS.postman_collection.json  FC_Data_API_Dev.postman_environment.json  FC_Data_API_PRODUCAO.postman_environment.json  FC_Data_API_Prod.postman_environment.json  FC_Data_API_Producao.postman_collection.json  GUIA_MIGRACAO_POSTMAN_2.1.md  GUIA_POSTMAN_2.0.md  GUIA_TESTES_POSTMAN.md  IDENTIFICACAO_CIRURGICA_CAMPO.ps1  IDENTIFICACAO_RAPIDA_CAMPO.bat  INVESTIGACAO_PORTAL_PROFISSIONAL.bat  INVESTIGACAO_PORTAL_PROFISSIONAL.ps1  LICENSE  PLANO_CORRECAO_ESPECIFICA.md  POSTMAN_DYNAMIC_QUERY_README.md  (+46 more)
deploy-seguro/: 01_PRE_VALIDACAO.bat  01_VALIDACAO_MENU.bat  02_BACKUP_ATUAL.bat  ABRIR_01_SEM_FECHAR.bat  LEIA_SE_SCRIPT_FECHA.md  MONITOR_TEMPO_REAL.bat  README_DEPLOY_SEGURO.md
deploy_producao/: 00_DEBUG_TOTAL.bat  01_VALIDACAO_PRE_DEPLOY.bat  (+16 more)
(+55 files in other folders)
